<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textView"
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/ic_launcher_foreground" />

    <TextView
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintRight_toLeftOf="@id/button"
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/some_text" />

    <Button
        app:layout_constraintLeft_toRightOf="@id/textView"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/button"
        android:layout_marginEnd="150dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>